--- a/style.css
+++ b/style.css
@@ -131,12 +131,16 @@ ul li {
   border-radius: 8px;
 }
 
-ul li:hover{
-  background-color: lightslategray;
-}
-
 ul li:nth-child(odd){
   background-color: rgb(250,215,215);
+}
+
+ul li:hover{
+  background-color: pink;
+}
+
+.delete{
+  text-decoration: line-through;
 }
 
 .navBarButton {
@@ -155,6 +159,24 @@ ul li:nth-child(odd){
   width: 200px;
   font-size: 16px;
 
+}
+
+ul li.checked {
+  background: palevioletred;
+  color: #fff;
+  text-decoration: line-through;
+}
+ul li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
 }
 
 .navBarButton:hover{
